# aoc2025

./: Cargo.toml
benches/: bench.rs
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day09.rs  day10.rs  day12.rs  lib.rs  main.rs  template.rs  util.rs
